@startuml MIM Logisch Informatiemodel Voorzieningencatalogus
!theme plain
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam classAttributeFontSize 10
skinparam packageFontSize 14
skinparam packageStyle rectangle
skinparam shadowing false
skinparam defaultFontName "Segoe UI"
skinparam nodesep 60
skinparam ranksep 50

title **Logisch Informatiemodel Voorzieningencatalogus**\nConform MIM 1.2 – Niveau 3 (Logisch informatiemodel)\n

' ============================================================
' MIM STEREOTYPEN & KLEUREN
' ============================================================
skinparam class {
  BackgroundColor<<Objecttype>> #CCE5FF
  BorderColor<<Objecttype>> #2171B5
  BackgroundColor<<Gegevensgroeptype>> #E0F0E0
  BorderColor<<Gegevensgroeptype>> #41AB5D
  BackgroundColor<<Enumeratie>> #FFF3CD
  BorderColor<<Enumeratie>> #FFA500
  BackgroundColor<<Koppelklasse>> #F0E0FF
  BorderColor<<Koppelklasse>> #7A3DB8
  BackgroundColor<<Extern>> #F0F0F0
  BorderColor<<Extern>> #999999
}

' ============================================================
' ENUMERATIES
' ============================================================
package "Waardelijsten" <<Rectangle>> {

  enum "Rol" <<Enumeratie>> {
    GEVERIFIEERD
    GEMEENTE_RAADPLEGER
    GEMEENTE_BEHEERDER
    SAMENWERKING_BEHEERDER
    LEVERANCIER
    REDACTEUR
    KING_RAADPLEGER
    KING_BEHEERDER
    ADMIN
    API_USER
  }

  enum "Koppelrichting" <<Enumeratie>> {
    heen
    weer
    beide
  }

  enum "Versie-status" <<Enumeratie>> {
    in ontwikkeling
    in test
    in distributie
    uit distributie
  }

  enum "Begrip-status" <<Enumeratie>> {
    actief
    inactief
    concept
  }
}

' ============================================================
' KERN: PAKKETTEN & LEVERANCIERS
' ============================================================
package "Pakketdomein" <<Rectangle>> {

  class "Leverancier" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    + slug : CharacterString [1]
    --
    logo : CharacterString [0..1]
    contactpersoon : CharacterString [0..1]
    email : CharacterString [0..1]
    telefoon : CharacterString [0..1]
    website : URI [0..1]
    heeftGeldigConvenant : Boolean [1] = false
    beschrijvingDiensten : CharacterString [0..1]
    supportPortalUrl : URI [0..1]
    documentatieUrl : URI [0..1]
    kennisbankUrl : URI [0..1]
    aanmaakdatum : DateTime [0..1]
    laatsteActiviteit : DateTime [0..1]
  }

  class "Pakket" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    + slug : CharacterString [1]
    --
    beschrijving : CharacterString [0..1]
    urlProductpagina : URI [0..1]
    aantalGemeenten : Integer [1] = 0
    mutatiedatum : DateTime [0..1]
  }

  class "Pakketversie" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    + status : CharacterString [1]
    --
    beschrijving : CharacterString [0..1]
    startOntwikkeling : DateTime [0..1]
    startTest : DateTime [0..1]
    startDistributie : DateTime [0..1]
    aantalGemeenten : Integer [1] = 0
    mutatiedatum : DateTime [0..1]
  }

  class "PakketContact" <<Gegevensgroeptype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    --
    email : CharacterString [0..1]
    telefoon : CharacterString [0..1]
    rol : CharacterString [0..1]
  }

  class "ExternPakket" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    --
    leverancierNaam : CharacterString [0..1]
    versie : CharacterString [0..1]
    beschrijving : CharacterString [0..1]
  }
}

' ============================================================
' GEMMA: REFERENTIECOMPONENTEN, STANDAARDEN, FUNCTIES
' ============================================================
package "GEMMA-domein" <<Rectangle>> {

  class "Referentiecomponent" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    --
    guid : CharacterString [0..1]
    beschrijving : CharacterString [0..1]
    status : CharacterString [0..1]
  }

  class "Standaard" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    --
    guid : CharacterString [0..1]
    beschrijving : CharacterString [0..1]
  }

  class "Standaardversie" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    --
    guid : CharacterString [0..1]
    status : CharacterString [0..1]
    compliancyMonitor : Boolean [1] = false
  }

  class "Applicatiefunctie" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    --
    guid : CharacterString [0..1]
    beschrijving : CharacterString [0..1]
  }

  class "GemmaView" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + objectId : CharacterString [1]
    + titel : CharacterString [1]
    --
    domein : CharacterString [0..1]
    laag : CharacterString [0..1]
    modelId : CharacterString [1]
    volgorde : Integer [1] = 0
    actief : Boolean [1] = true
  }
}

' ============================================================
' GEMEENTEN & SAMENWERKINGEN
' ============================================================
package "Gemeentedomein" <<Rectangle>> {

  class "Gemeente" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    --
    cbsCode : CharacterString [0..1]
    contactpersoon : CharacterString [0..1]
    email : CharacterString [0..1]
    telefoon : CharacterString [0..1]
    website : URI [0..1]
    voortgang : Integer [1] = 0
    laatsteActiviteit : DateTime [0..1]
  }

  class "Samenwerking" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    --
    type : CharacterString [0..1]
    contactpersoon : CharacterString [0..1]
    email : CharacterString [0..1]
  }
}

' ============================================================
' KOPPELTABELLEN (Relatieobjecten met attributen)
' ============================================================
package "Relatieobjecten" <<Rectangle>> {

  class "GemeentePakket" <<Koppelklasse>> {
    status : CharacterString [0..1]
    datumIngangStatus : DateTime [0..1]
    technologie : CharacterString [0..1]
    mutatiedatum : DateTime [0..1]
    verantwoordelijke : CharacterString [0..1]
    licentievorm : CharacterString [0..1]
    aantalGebruikers : Integer [0..1]
  }

  class "PakketversieReferentiecomponent" <<Koppelklasse>> {
    type : CharacterString [1]
    aantalGemeenten : Integer [1] = 0
  }

  class "PakketversieStandaard" <<Koppelklasse>> {
    compliancy : Boolean [0..1]
    testrapportUrl : URI [0..1]
    compliancyIndicated : Boolean [0..1]
  }

  class "PakketversieApplicatiefunctie" <<Koppelklasse>> {
    ondersteund : Boolean [1] = true
  }

  class "PakketversieTechnologie" <<Koppelklasse>> {
    technologie : CharacterString [1]
  }

  class "LeverancierAddendum" <<Koppelklasse>> {
  }
}

' ============================================================
' KOPPELINGEN (INTEGRATIES)
' ============================================================
package "Integratiedomein" <<Rectangle>> {

  class "Koppeling" <<Objecttype>> {
    + identificatie : CharacterString [1]
    --
    richting : Koppelrichting [1] = beide
    buitengemeentelijk : Boolean [1] = false
    status : CharacterString [0..1]
    standaard : CharacterString [0..1]
    datumIngangStatus : DateTime [0..1]
    transportprotocol : CharacterString [0..1]
    aanvullendeInformatie : CharacterString [0..1]
  }

  class "Addendum" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + naam : CharacterString [1]
    --
    beschrijving : CharacterString [0..1]
    url : URI [0..1]
  }
}

' ============================================================
' GEBRUIKERS & AUTORISATIE
' ============================================================
package "Gebruikersdomein" <<Rectangle>> {

  class "Gebruiker" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + email : CharacterString [1]
    + naam : CharacterString [1]
    --
    actief : Boolean [1] = true
    rollen : Rol [1..*] = {GEVERIFIEERD}
    registratieBron : CharacterString [1] = "admin"
    organisatieType : CharacterString [0..1]
    organisatieNaam : CharacterString [0..1]
    afgewezen : Boolean [1] = false
    laatsteToegangOp : DateTime [0..1]
  }

  class "WachtwoordResetToken" <<Gegevensgroeptype>> {
    + token : CharacterString [1]
    + verlooptOp : DateTime [1]
    --
    gebruiktOp : DateTime [0..1]
  }
}

' ============================================================
' CONTENT & BEGRIPPEN
' ============================================================
package "Contentdomein" <<Rectangle>> {

  class "Pagina" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + slug : CharacterString [1]
    + titel : CharacterString [1]
    --
    inhoud : CharacterString [1]
  }

  class "Begrip" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + term : CharacterString [1]
    + definitie : CharacterString [1]
    + uri : URI [1]
    --
    toelichting : CharacterString [0..1]
    scopeNote : CharacterString [0..1]
    bron : CharacterString [0..1]
    synoniemen : CharacterString [0..*]
    vocabulaire : CharacterString [0..1]
    status : Begrip-status [1] = actief
  }
}

' ============================================================
' AUDIT
' ============================================================
package "Auditdomein" <<Rectangle>> {

  class "AuditLogRegel" <<Objecttype>> {
    + identificatie : CharacterString [1]
    + actie : CharacterString [1]
    + entiteit : CharacterString [1]
    + aangemaakt : DateTime [1]
    --
    gebruikerId : CharacterString [0..1]
    gebruikerEmail : CharacterString [0..1]
    entiteitId : CharacterString [0..1]
    details : CharacterString [0..1]
    ipAdres : CharacterString [0..1]
  }
}

' ============================================================
' RELATIES (MIM: «Relatiesoort»)
' ============================================================

' -- Pakketdomein intern --
Leverancier "1" --> "0..*" Pakket : «Relatiesoort»\nlevert >
Pakket "1" --> "0..*" Pakketversie : «Relatiesoort»\nheeft versie >
Pakket "1" --> "0..*" PakketContact : «Relatiesoort»\nheeft contact >

' -- Leverancier-Addendum --
Leverancier "0..*" -- "0..*" Addendum
(Leverancier, Addendum) .. LeverancierAddendum

' -- GEMMA relaties --
Standaard "1" --> "0..*" Standaardversie : «Relatiesoort»\nheeft versie >

' -- Pakketversie ↔ GEMMA (via koppelklassen) --
Pakketversie "0..*" -- "0..*" Referentiecomponent
(Pakketversie, Referentiecomponent) .. PakketversieReferentiecomponent

Pakketversie "0..*" -- "0..*" Standaardversie
(Pakketversie, Standaardversie) .. PakketversieStandaard

Pakketversie "0..*" -- "0..*" Applicatiefunctie
(Pakketversie, Applicatiefunctie) .. PakketversieApplicatiefunctie

Pakketversie "1" --> "0..*" PakketversieTechnologie : «Relatiesoort»\ngebruikt >

' -- Gemeente ↔ Pakketversie --
Gemeente "0..*" -- "0..*" Pakketversie
(Gemeente, Pakketversie) .. GemeentePakket

' -- Samenwerking ↔ Gemeente --
Samenwerking "0..*" o-- "1..*" Gemeente : «Relatiesoort»\nheeft lid >

' -- Koppelingen --
Koppeling "0..*" --> "1" Gemeente : «Relatiesoort»\nbinnen gemeente >
Koppeling "0..*" --> "0..1" Pakketversie : «Relatiesoort»\nbronpakket >
Koppeling "0..*" --> "0..1" ExternPakket : «Relatiesoort»\nexterne bron >

' -- Gebruiker relaties --
Gebruiker "0..*" --> "0..1" Gemeente : «Relatiesoort»\nwerkt bij >
Gebruiker "0..*" --> "0..1" Leverancier : «Relatiesoort»\nwerkt voor >
Gebruiker "1" --> "0..*" WachtwoordResetToken : «Relatiesoort»\nheeft token >

' ============================================================
' LEGENDA
' ============================================================
legend bottom right
  |= Kleur |= MIM-stereotype |
  | <#CCE5FF> | «Objecttype» |
  | <#E0F0E0> | «Gegevensgroeptype» |
  | <#F0E0FF> | «Koppelklasse» (relatieobject) |
  | <#FFF3CD> | «Enumeratie» (waardelijst) |
  --
  MIM 1.2 – Niveau 3: Logisch informatiemodel
  Voorzieningencatalogus – VNG / ArchiXL
  Gegenereerd: 2026-03-17
end legend

@enduml
